@@ -1,3 +1,0 @@
-# Send all events to this Unix-domain socket, to be caught by udevmonitor
-RUN+="socket:/org/kernel/udev/monitor"
-
